--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -51,13 +51,14 @@
                   <li><a class="dropdown-item" href="/products/edit">Termos</a></li>
                   <li><a class="dropdown-item" href="/products/edit">Bombillas</a></li>
                   <li><a class="dropdown-item" href="/products/edit">Materas</a></li>
+                  <li><a class="dropdown-item" href="/products/edit">Yerberos</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="/products">Todos los productos</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Link
+                  <i class="far fa-edit"></i>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                   <li><a class="dropdown-item" href="/products/new">Agregar producto</a></li>
