--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -38,7 +38,7 @@
         <a href="/products"><img src="/images/termo-circulo.png" alt="mates"><div class="articulo-text">Termos</div></a>
         <a href="/products"><img src="/images/bombilla-circulo.png" alt="mates"><div class="articulo-text">Bombillas</div></a>
         <a href="/products"><img src="/images/matera-circulo.png" alt="mates"><div class="articulo-text">Materas</div></a>
-        <a href="/products"><img src="/images/yerbero-circulo.png" alt="mates">Yerberos</a>
+        <a href="/products"><img src="/images/yerbero-circulo.png" alt="mates"><div class="articulo-text">Yerberos</div></a>
     
 
     </div>
