--- a/core/public/css/stylesheet.css
+++ b/core/public/css/stylesheet.css
@@ -284,27 +284,27 @@ a i{
 /* ---------- HOME ARTICULOS ---------- */
 
 .articulo-cont{
-   
-    place-content: center;
     display: flex;
-
     justify-content: space-around;
     flex-grow: 1;
-    align-items: center;
+    align-self: center;
+    margin: 74px;
   
 }
 .articulo-cont img{
     width: 50%;
-    place-content: center;
+    
 }
 
 .articulo-cont a{
     text-decoration: none;
+    text-align: center;
 }
 .articulo-text{
     color:rgb(255, 255, 255);
-    align-self: center;
+    text-align: center;
 }
+
 
 /* ---------- ARTICULOS PRODUCTOS ---------- */
 
