--- a/core/views/producto/productNew.ejs
+++ b/core/views/producto/productNew.ejs
@@ -43,12 +43,14 @@
                     <label> Categoria
                             <br>
                             <select name="categoria" >
-                                <% for( let i = 0; i < categoria.length; i++ ) { %>
-                                <option value= "<%= categoria[i].id %>">
-                                    <%= categoria[i].name> %>
-                                </option>
-                                <% } %>
-                            </select> 
+                                <% categorias.forEach(categoria => { %>
+                                    <option value= "<%=categoria.Id%>">
+                                        <%= categoria.Categorie%>
+                                    </option>
+                                    <% }) %>
+                                
+                                    
+                                </select> 
                     </label>
                     <br>
                     <label> Precio
