--- a/core/views/producto/productNew.ejs
+++ b/core/views/producto/productNew.ejs
@@ -24,7 +24,8 @@
                 
                 <div class ="Img_Product">
                     <div class ="Cont_Icon_File_Img">
-                        <i class="fas fa-file-image"></i>
+                        <label for="imagen_product">Imagen Producto</label>
+                       <input type="file" name="imagen_product" id="imagen_product">
                     </div>
                 </div>
 
