--- a/core/views/producto/productNew.ejs
+++ b/core/views/producto/productNew.ejs
@@ -19,62 +19,48 @@
             <div class ="Title_New_Product">
                 <h2 class="Tittle_New_Product_H">Añadir nuevo producto</h2>    
             </div>
+            <form action ="/products/new" method ="POST" class="register-form" enctype="multipart/form-data">
 
-            <form action ="/products/new" method ="POST" class = "Form_newProduct" enctype="multipart/form-data">
-                
-                <div class ="Img_Product">
-                    <div class ="Cont_Icon_File_Img">
-                        <label for="imagen_product">Imagen Producto</label>
-                       <input type="file" name="imagen_product" id="imagen_product">
-                    </div>
-                </div>
 
-                <div class ="Nomb_Desc_Product">
-                    <label> Nombre del producto
-                            
-                            <input type ="text" name = "nombreProduct" required>
-                    </label>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1"><i class="fab fa-product-hunt"></i></span>
+                <input type="text" name = "nombreProduct" class="form-control" placeholder="Nombre del producto" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              
+              <div class="input-group mb-3">
+                <input type="text" name = "descProduct" class="form-control" placeholder="Descripción del producto" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <span class="input-group-text" id="basic-addon2">Descripción</span>
+              </div>
+              
+              <div class="input-group mb-3">
+                <label class="input-group-text" for="inputGroupSelect01">Categoría</label>
+                <select class="form-select" id="inputGroupSelect01">
+                    <option selected>Choose...</option>
+                    <% categorias.forEach(categoria => { %>
+                  <option value= "<%=categoria.Id%>">
+                    <%= categoria.Categorie%>
+                </option>
+                <% }) %>
+                </select>
+              </div>
+              
+              <div class="input-group mb-3">
+                <span class="input-group-text">$</span>
+                <input type="text" name = "precProduct" id ="precProduct" class="form-control" aria-label="Amount (to the nearest dollar)">
+                <span class="input-group-text">.00</span>
+              </div>
+              
+              <div class="input-group mb-3">
+                <input type="text" name = "ofertProduct" id ="ofertProduct" class="form-control" placeholder="Oferta (opcional)" aria-label="Username">
+                <span class="input-group-text">%</span>
+                <div class="input-group">
+                    <input type="file" name="imagen_product" id="imagen_product" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
                     
-                    <label> Descripción 
-                            
-                            <input type ="text" name = "descProduct" >
-                    </label>
-                    
-                    
-                    <label> Categoria
-                            
-                            <select name="categoria" >
-                                <% categorias.forEach(categoria => { %>
-                                    <option value= "<%=categoria.Id%>">
-                                        <%= categoria.Categorie%>
-                                    </option>
-                                    <% }) %>
-                                
-                                    
-                                </select> 
-                    </label>
-                    
-                    <label> Precio
-                            
-                            <input type ="text" name = "precProduct" id ="precProduct"  >
-                            
-                    </label>
-                    
-                    <label> Oferta (opcional)
-                            
-                            <input type ="text" name = "ofertProduct" id ="ofertProduct"  >
-                            
-                    </label>
-                </div>
-                <div class ="Cont_buttons_New_Product">
-                    <div class ="Cont_Input_File_Img">
-                        <input type ="file" name = "imgProduct" class ="Input_File_Img">
-                    </div>
-                    <div class ="Button_New_Product">
-                            <button type="submit" value="Agregar" class = "ButonAddProduct" name ="ButonAddProduct">Agregar</button>
-                            <button type="submit" value="Cancelar" class = "ButtonCancProduct" name="ButtonCancProduct">Cancelar</button>
-                    </div>
-                </div>
+                  </div>
+                  
+              </div>
+              <button type="submit" name ="ButonAddProduct" value="Agregar" class="btn btn-outline-success">Agregar</button>
+
             </form>
         </div>
     </div>
